update & spotlessapply